--- a/disconf-web/html/main.html
+++ b/disconf-web/html/main.html
@@ -35,9 +35,9 @@
 
                         <span class="span2"> </span>
                         <form class="navbar-form pull-left">
-                            <button class="btn btn-warning" title="GitHub" type="button" style=""  onclick="window.open('https://github.com/knightliao/disconf', '_blank');">
+                            <!-- <button class="btn btn-warning" title="GitHub" type="button" style=""  onclick="window.open('https://github.com/knightliao/disconf', '_blank');">
                                 <i class="icon-circle-arrow-up  icon-white"></i> <b>GitHub</b>
-                            </button>
+                            </button> -->
                         </form>
                         
                         <ul class="nav pull-right" >
@@ -57,6 +57,7 @@
                                         <li><a href="/newapp.html">新建APP</a></li>
                                         <li><a href="/newconfig_item.html">新建配置项</a></li>
                                         <li><a href="/newconfig_file.html">新建配置文件</a></li>
+                                        <li><a href="/newconfig_copy.html">复制配置</a></li>
                                     </ul>
                                 </li>
                                 &nbsp;&nbsp;&nbsp;&nbsp;
@@ -179,6 +180,7 @@
         <div id="footer">
             <div id="BottomMain">
                 <div class="inner">
+
                     <strong>
                         <a href="#" class="dark">关于</a> &nbsp; 
                     </strong>
@@ -188,9 +190,11 @@
                     <div class="sep10"></div>
                     <span>分布式配置管理平台</span>
                     <div class="sep10"></div>
+                    <!--
                     <span class="myfade">Theme by <a href="http://django-china.cn/" target="_blank">Django中国社区</a>， 
                         Power by 百度程序化广告交易工程平台技术部，
                     Copyright &copy; 2014 </span>
+                    -->
                 </div>
             </div>
         </div>
