--- a/disconf-web/html/newconfig_copy.html
+++ b/disconf-web/html/newconfig_copy.html
@@ -86,12 +86,97 @@
 
 
 <div id="Wrapper" class="clearfix">
-    <div id="Main">
+    <div id="Main" style="margin-top:50px;">
         <div class="container-fluid">
 
             <div class="row-fluid">
-                <div class="contentWrap clearfix">
-                    <img src="assets/img/index-big.jpg" class="index-bigImg"/>
+                <ul class="breadcrumb" style="background-color:#fff;">
+                    <li>
+                        <a href="/main.html">配置</a>
+                    </li>
+                    <li class="active">
+                        / 复制配置
+                    </li>
+                </ul>
+            </div>
+
+            <div class="row-fluid">
+                <div class="span12">
+
+                    <div class="content">
+                        <form id="form" action="/config/" method="post" enctype="multipart/form-data"
+                              class="private-form clearfix">
+                            <h2 class="autoPush-detail-title"> 复制配置</h2>
+
+                            <fieldset >
+                                <legend>配置源</legend>
+                                <div class="private-item">
+                                    <span class="private-item-key">APP选择:</span>
+
+                                    <div class="btn-group">
+                                        <a id="appChoiceA" class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                                            <span style="margin-right:2px;">选择APP</span> </span></span><span
+                                                class="caret"></span> </a>
+                                        <ul class="dropdown-menu" id="appChoice"></ul>
+                                    </div>
+                                </div>
+                                <div class="private-item">
+                                    <span class="private-item-key">版本：</span>
+
+                                    <div class="btn-group">
+                                        <a id="versionChoiceA" class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                                            <span style="margin-right:2px;">选择版本 </span><span class="caret"></span> </a>
+                                        <ul class="dropdown-menu" id="versionChoice"></ul>
+                                    </div>
+                                </div>
+                                <div class="private-item" id="selfversion" style="display:none">
+                                    <span class="private-item-key">自定义版本：</span>
+                                    <input id="selfversion_value" type="text" class="private-item-value"/>
+                                </div>
+                                <div class="private-item">
+                                    <span class="private-item-key">环境：</span>
+
+                                    <div class="btn-group">
+                                        <a id="envChoiceA" class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                                            <span style="margin-right:2px;">选择环境 </span><span class="caret"></span> </a>
+                                        <ul class="dropdown-menu" id="envChoice"></ul>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <legend>配置目的</legend>
+                                <div class="private-item">
+                                    <span class="private-item-key">版本：</span>
+
+                                    <div class="btn-group">
+                                        <a id="versionChoiceD" class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                                            <span style="margin-right:2px;">选择版本 </span><span class="caret"></span> </a>
+                                        <ul class="dropdown-menu" id="versionChoiceDest"></ul>
+                                    </div>
+                                </div>
+                                <div class="private-item" id="selfversionDest" style="display:none">
+                                    <span class="private-item-key">自定义版本：</span>
+                                    <input id="selfversionDest_value" type="text" class="private-item-value"/>
+                                </div>
+                                <div class="private-item">
+                                    <span class="private-item-key">环境：</span>
+
+                                    <div class="btn-group">
+                                        <a id="envChoiceD" class="btn dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
+                                            <span style="margin-right:2px;">选择环境 </span><span class="caret"></span> </a>
+                                        <ul class="dropdown-menu" id="envChoiceDest"></ul>
+                                    </div>
+                                </div>
+                            </fieldset>
+                            <div id="error" class="alert alert-warning hide" role="alert">
+                                表单选项不能为空或填写格式错误！
+                            </div>
+                            <div class="private-item" style="text-align:center">
+                                <a id="item_submit" class="btn btn-primary"> 复制 </a>
+                            </div>
+                        </form>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -139,7 +224,8 @@
 
 
 
-<script src="assets/js/index.js"></script>
+        <script src="dep/layer/layer.js"></script>
+        <script src="assets/js/newconfig_copy.js"></script>
 
         <script src="assets/js/footer.js"></script>
     
