1，界面：配置目的地 2，版本Tab排序问题：按Version字典序，更新因按时间排序导致的难读的代码 3, ConfMgr Boolean -> boolean 4, ConfMgrImp 不用的代码直接删掉，不要只是注释掉 5. login 废弃redisLogin 改成sessionLogin 6. 监控定时任务在多机部署情况下的重复执行 问题解决

--- a/disconf-web/html/newconfig_copy.html
+++ b/disconf-web/html/newconfig_copy.html
@@ -144,7 +144,7 @@
                                 </div>
                             </fieldset>
                             <fieldset>
-                                <legend>配置目的</legend>
+                                <legend>配置目的地</legend>
                                 <div class="private-item">
                                     <span class="private-item-key">版本：</span>
 
