--- a/disconf-web/src/main/webapp/version.html
+++ b/disconf-web/src/main/webapp/version.html
@@ -1,1 +1,10 @@
-version:init
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+<body>
+ disconf v1.0.0
+</body>
+</html>
