修改 单项配置值为 多行文本

--- a/disconf-web/html/mainTpl/newconfig_item.tpl.html
+++ b/disconf-web/html/mainTpl/newconfig_item.tpl.html
@@ -65,7 +65,8 @@
                             </div>
                             <div class="private-item">
                                 <span class="private-item-key">配置值：</span>
-                                <input id="value" type="text" class="private-item-value"/>
+                                <textarea id="value" type="text" class="private-item-value"
+                                          style="min-width:500px;height:200px;"></textarea>
                             </div>
                             <div id="error" class="alert alert-warning hide" role="alert">
                                 表单选项不能为空或填写格式错误！
