--- a/disconf-web/html/modifyItem.html
+++ b/disconf-web/html/modifyItem.html
@@ -141,7 +141,8 @@
 
                             <p class="private-item">
                                 <span class="private-item-key">配置值：</span>
-                                <input id="value" type="text" class="private-item-value"/>
+                                <textarea id="value" type="text" class="private-item-value"
+                                          style="min-width:500px;height:200px;"></textarea>
                             </p>
 
                             <div id="error" class="alert alert-warning hide" role="alert">
