--- a/disconf-web/html/newconfig_item.html
+++ b/disconf-web/html/newconfig_item.html
@@ -179,11 +179,6 @@
                     <div class="sep10"></div>
                     <span>分布式配置管理平台</span>
                     <div class="sep10"></div>
-                    <!--
-                    <span class="myfade">Theme by <a href="http://django-china.cn/" target="_blank">Django中国社区</a>， 
-                        Power by 百度程序化广告交易工程平台技术部，
-                    Copyright &copy; 2014 </span>
-                    -->
                 </div>
             </div>
         </div>
@@ -191,9 +186,11 @@
         <script src="assets/js/jquery-1.11.0.js"></script>
         <script src="dep/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.js"></script>
         <script src="dep/bootstrap/js/bootstrap.js"></script>
+        <script src="dep/layer/layer.js"></script>
+        <script src="dep/angular/1.4.6/angular.min.js"></script>
+        <script src="dep/angular/plugin/paging.js"></script>
         <script src="assets/js/util.js"></script>
         <script src="assets/js/common.js"></script>
-
         <script>
         var _hmt = _hmt || [];
         (function() {
