1.  解决bug app名称太长 http://jira.ymatou.cn:8080/browse/DIS-5 2. 任务中心： 任务审核、任务详情等功能

--- a/disconf-web/html/config_campare.html
+++ b/disconf-web/html/config_campare.html
@@ -44,6 +44,8 @@
 <script type="text/javascript">
 
 	var app = angular.module('myApp', []);
+
+	addInterceptor(app);
 	app.controller('validateCtrl',['$scope','$http', function($scope,$http) {
 
 		var id = getQueryString("id");
