--- a/disconf-web/html/my_config_draft.html
+++ b/disconf-web/html/my_config_draft.html
@@ -159,7 +159,7 @@
                                         <td>{{data.updateTime}}</td>
                                         <td>
                                             <a ng-show="data.draftType!='delete'" ng-click="modify(data.id,data.type)" style="cursor: pointer; cursor: hand; "><i title="修改" class="icon-edit"></i></a> |
-                                            <a ng-click="detail(data.id,data.name,data.draftType)" style="cursor: pointer; cursor: hand; "><i title="查看对比" class="icon-check"></i></a> |
+                                            <a ng-click="detail(data.id,data.name,data.draftType)" style="cursor: pointer; cursor: hand; "><i title="查看对比" class="icon-search"></i></a> |
                                             <a ng-click="delete(data.id)" style="cursor: pointer; cursor: hand; "><i title="删除" class="icon-remove"></i></a>
                                         </td>
                                     </tr>
