--- a/disconf-web/html/task_config_audit.html
+++ b/disconf-web/html/task_config_audit.html
@@ -86,93 +86,94 @@
 
 <div id="Wrapper" class="clearfix">
     <div id="Main" style="margin-top:50px;">
-        <div class="container-fluid">
-            <div class="row-fluid" style="min-height:400px;">
-                <div class="sidebar span2" style="float:left;overflow:visible;">
+        <div class="container-fluid" ng-app="myApp" ng-controller="validateCtrl">
 
-                    <div class="dropdown" style="margin-top:20px;width:100%;word-wrap:break-word;word-break:break-all;">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="appDropdownMenu"
-                                data-toggle="dropdown" style="width:100%;">
-                            <span id="appDropdownMenuTitle">Apps</span>
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" id="applist" role="menu" aria-labelledby="appDropdownMenu"></ul>
-                    </div>
-                            
-                    <!--envroment list-->
-                    <ul id="envChoice" class="nav nav-pills nav-stacked" style="margin-top:20px;">
-                    </ul>
+            <div class="row-fluid">
+                <ul class="breadcrumb" style="background-color:#fff;">
+                    <li>
+                        <a href="/my_config_draft.html">任务中心</a>
+                    </li>
+                    <li class="active">
+                        / 任务审核
+                    </li>
 
-                </div>
-                <div class="span10" style="float:left">
+                </ul>
+            </div>
 
-                    <div class="row-fluid">
-                        <div class="contentWrap clearfix">
-                            <ul id="versionChoice" class="nav nav-tabs" role="tablist"></ul>
-                        </div>
-                    </div>
+            <div class="row-fluid">
 
-                    <div id="zk_deploy" class="row-fluid" style="margin-bottom:5px">
-                                <span id="env_info" href="#" class="muted" style="float:left" title="" type="">
-                                </span>
-                                <span id="app_info" href="#" class="muted" style="float:left" title="" type="">
-                                </span>
-                        <a id="zk_deploy_button" href="#" class="btn-small btn-primary" style="float:right;" title=""
-                           type="button">
-                            <b>ZK部署情况</b>
-                        </a>
-                        <a id="batch_download" href="#" class="btn-small btn-primary"
-                           style="float:right;margin-right:5px;" title="" type="button">
-                            <b>批量下载</b>
-                        </a>
-                    </div>
+                <div class="span12">
 
-                    <div id="zk_deploy_info" class="hide" style="padding-bottom:20px;">
-                                <pre id="zk_deploy_info_pre" style="min-height:200px">
-                                </pre>
-                    </div>
-
-                    <div class="row-fluid">
-
-                        <div class="contentWrap clearfix">
-                            <div id="mainlist_error" class="alert alert-warning" role="alert"></div>
+                    <div class="content oz">
+                        <form  ng-submit="submitForm(myForm.$valid)"
+                               name="myForm" novalidate class="private-form clearfix">
+                            <h2 class="autoPush-detail-title">任务审核</h2>
+                            <div>
+                            <div style="float:left;width: 49%;">
+                            <div class="detail-private-line">
+                                <span >APP名称：</span><span style="margin-left: 10px;">{{task.appName}}</span>
+                            </div>
+                            <div class="detail-private-line">
+                                <span>环境名称：</span><span style="margin-left: 10px;">{{task.envName}}</span>
+                            </div>
+                            <div class="detail-private-line">
+                                <span>版本：</span><span style="margin-left: 10px;">{{task.version}}</span>
+                            </div>
+                            </div>
+                            <div style="float:right;width: 49%;">
+                                <div class="detail-private-line">
+                                    <span>任务提交人：</span><span style="margin-left: 10px;">{{task.createUserName}}</span>
+                                </div>
+                                <div class="detail-private-line">
+                                    <span>任务提交时间：</span><span style="margin-left: 10px;">{{task.createTime}}</span>
+                                </div>
+                                <div class="detail-private-line">
+                                    <span>任务说明：</span><span style="margin-left: 10px;">{{task.memo}}</span>
+                                </div>
+                            </div>
+                            </div>
                             <table id="mainlist"
                                    class="table table-bordered table-condensed table-hover account-tableWrap table-striped"
-                                   style="display:none">
+                                   style="display:table">
                                 <thead>
+                                <th>
+                                    <span style="margin-left: 50px;">配置对比：</span>
+                                </th>
                                 <tr>
-                                    <td>#</td>
-                                    <td>APP</td>
-                                    <td>KEY</td>
-                                    <td>配置内容</td>
-                                    <td>实例列表</td>
-                                    <td>修改时间</td>
+                                    <td>名称</td>
+                                    <td>类型</td>
+                                    <td>操作类型</td>
                                     <td>操作</td>
                                 </tr>
                                 </thead>
-                                <tbody id="accountBody"
-                                       style="max-width:760px; overflow-wrap: break-word;word-wrap: break-word;"
-                                       class="account-tableWrap"></tbody>
+                                <tbody style="overflow-wrap: break-word;word-wrap: break-word;"
+                                       class="account-tableWrap">
+                                    <tr ng-repeat="data in task.configDraftList">
+                                        <td>{{data.name}}</td>
+                                        <td style="margin:10px;">{{data.type==0?'文件':'配置项'}}</td>
+                                        <td style="margin:10px;">{{data.draftType=='create'?'新建':data.draftType=='modify'?'修改':'删除'}}</td>
+                                        <td style="margin:10px;"> <a href="javascript:void(0)" ng-click="compare(data.id,data.name,data.draftType)">查看对比</a></td>
+                                    </tr>
+                                </tbody>
                             </table>
-                        </div>
+
+                            <div class="private-item">
+                                <span>审核意见：</span><span style="margin-left: 10px;">
+                                <textarea id="auditComment" type="text" class="private-item-value"
+                                          style="width:80%;height:100px;"></textarea>
+                                </span>
+                            </div>
+
+                            <div class="private-item" style="text-align:center">
+                                <input type="button" ng-click="taskAudit('pass')" value="通过" class="btn btn-primary"/>
+                                <input type="button" ng-click="taskAudit('fail')" value="不通过" class="btn btn-danger"/>
+                                <input type="button" onclick="history.go(-1);" value="返回" class="btn btn-warning"/>
+                            </div>
+
+                        </form>
+
                     </div>
                 </div>
-
-                <!-- 详细信息单行模板-->
-                <div id="tbodyTpl" class="hide" style="width:0px;">
-                    <table>
-                        <tr>
-                            <td>{12}</td>
-                            <td style="max-width:100px">{1}</td>
-                            <td style="max-width:100px">{6} &nbsp; {5}</td>
-                            <td>{14}</td>
-                            <td>{15}</td>
-                            <td>{8}</td>
-                            <td>{10} &nbsp; {11} &nbsp; {13} &nbsp; </td>
-                        </tr>
-                    </table>
-                </div>
-
             </div>
         </div>
     </div>
@@ -215,7 +216,7 @@
         </script>
 
 
-<script src="assets/js/mainList.js"></script>
+<script src="assets/js/task_config_audit.js"></script>
 
         <script src="assets/js/footer.js"></script>
     
