1.修改bug 2.查看某下版本下所有配置功能

--- a/disconf-web/html/main.html
+++ b/disconf-web/html/main.html
@@ -125,6 +125,10 @@
                            style="float:right;margin-right:5px;" title="" type="button">
                             <b>批量下载</b>
                         </a>
+                        <a id="view" href="#" class="btn-small btn-primary"
+                           style="float:right;margin-right:5px;" title="" type="button">
+                            <b>查看所有配置</b>
+                        </a>
                     </div>
 
                     <div id="zk_deploy_info" class="hide" style="padding-bottom:20px;">
