增加发布脚本 增加版本日志

--- a/disconf-web/src/main/webapp/version.html
+++ b/disconf-web/src/main/webapp/version.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        span{
+            margin:10px;
+            margin-left: 50px;
+            display:block;
+        }
+        div{
+            margin:10px;
+        }
+
+    </style>
 </head>
 <body>
- disconf v1.0.0
+ disconf 发布日志
+         <div>v1.0.1 2016-04-30  增加审核功能版本
+             <span>1.增加用户管理：新增、修改、删除用户 cas 域用户集成</span>
+             <span>2.增加APP管理: App用户管理(设置普通人员、审核员)</span>
+             <span>3.增加审核功能，所有配置操作：新增、修改、删除、复制都只生成草稿</span>
+             <span>4.任务中心：我的草稿、我提交的任务、我的待办任务、我的已办任务、已完成任务等</span>
+             <span>5.任务审核通过 定时生效</span>
+             <span>6.其他bug修改</span>
+         </div>
+         <div>v1.0.0 2016-03-06
+             <span>1.first version from github disconf</span>
+             <span>2.增加复制配置功能</span>
+             <span>3.修复部分bug</span>
+         </div>
+
+
 </body>
 </html>
