--- a/disconf-web/html/my_config_draft.html
+++ b/disconf-web/html/my_config_draft.html
@@ -99,7 +99,7 @@
                         <li ><a href="my_submit_task.html">我提交的任务</a></li>
                         <li ><a href="my_todo_task.html">我的待办任务</a></li>
                         <li ><a href="my_done_task.html">我的已办任务</a></li>
-                        <li ><a href="my_finished_task">已完成的任务</a></li>
+                        <li ><a href="my_finished_task.html">已完成的任务</a></li>
                     </ul>
 
                 </div>
