1.修改cas登录 保存用户默认的密码 2.修改app 权限列表bug 3.修改页面退回上一页不刷新 4.修改页面功能名称

--- a/disconf-web/html/config_campare.html
+++ b/disconf-web/html/config_campare.html
@@ -29,7 +29,7 @@
     </div>
 
 	<div class="col-xs-12" style="width: 49.3%;float: right;padding-right: 5px">
-		<h5>配置最新内容</h5>
+		<h5>当前生效内容</h5>
 		<pre class="prettyprint linenums" id="configContent">
 
 		</pre>
