--- a/disconf-web/html/mainTpl/app_user_manage.tpl.html
+++ b/disconf-web/html/mainTpl/app_user_manage.tpl.html
@@ -89,7 +89,7 @@
 
                             <div class="private-item" style="text-align:center">
                                 <input type="submit" value="保存" ng-disabled="myForm.$invalid" class="btn btn-primary"/>
-                                <input type="button" onclick="history.go(-1);" value="返回" class="btn btn-warning"/>
+                                <input type="button" onclick="goBack();" value="返回" class="btn btn-warning"/>
                             </div>
 
                         </form>
