--- a/disconf-web/html/newapp.html
+++ b/disconf-web/html/newapp.html
@@ -132,7 +132,7 @@
                             </div>
                             <div class="private-item" style="text-align:center">
                                 <a id="item_submit" class="btn btn-primary"> 新建 </a>
-                                <input type="button" onclick="history.go(-1);" value="返回" class="btn btn-warning"/>
+                                <input type="button" onclick="goBack();" value="返回" class="btn btn-warning"/>
                             </div>
                         </form>
                     </div>
