--- a/disconf-web/html/task_config_audit.html
+++ b/disconf-web/html/task_config_audit.html
@@ -167,7 +167,7 @@
                             <div class="private-item" style="text-align:center">
                                 <input type="button" ng-click="taskAudit('pass')" value="通过" class="btn btn-primary"/>
                                 <input type="button" ng-click="taskAudit('fail')" value="不通过" class="btn btn-danger"/>
-                                <input type="button" onclick="history.go(-1);" value="返回" class="btn btn-warning"/>
+                                <input type="button" onclick="goBack();" value="返回" class="btn btn-warning"/>
                             </div>
 
                         </form>
