--- a/disconf-web/html/task_config_detail.html
+++ b/disconf-web/html/task_config_detail.html
@@ -177,7 +177,7 @@
 
 
                             <div class="private-item" style="text-align:center">
-                                <input type="button" onclick="history.go(-1);" value="返回" class="btn btn-warning"/>
+                                <input type="button" onclick="goBack();" value="返回" class="btn btn-warning"/>
                             </div>
 
                         </form>
