1.修改删除提示 2.修改删除验证 不能多次生成删除草稿 3.修改任务审核增加生效时间

--- a/disconf-web/html/task_config_audit.html
+++ b/disconf-web/html/task_config_audit.html
@@ -130,6 +130,9 @@
                                 <div class="detail-private-line">
                                     <span>任务说明：</span><span style="margin-left: 10px;">{{task.memo}}</span>
                                 </div>
+                                <div class="detail-private-line">
+                                    <span>生效时间：</span><span style="margin-left: 10px;">{{task.execTime=='now'?'立刻':task.execTime}}</span>
+                                </div>
                             </div>
                             </div>
                             <table id="mainlist"
