--- a/disconf-web/html/admin_apps.html
+++ b/disconf-web/html/admin_apps.html
@@ -115,7 +115,7 @@
                                 APP名称<input name="desc" type="text" ng-model="app.name" >
                                 说明<input name="desc" type="text" ng-model="app.desc" >
                                 <button class="btn-primary btn-large" ng-click="search()" >查询</button>
-                                <button class="btn btn-info btn-large" ng-click="add()" >新建APP</button>
+                                <button id="createApp" class="btn btn-info btn-large" ng-click="add()" >新建APP</button>
                             </pre>
                             </form>
                         </div>
