下载文件增加utf-8编码

--- a/disconf-iapi/src/main/resources/static/version.html
+++ b/disconf-iapi/src/main/resources/static/version.html
@@ -17,7 +17,8 @@
 </head>
 <body>
 disconf iapi 发布日志
-
+<div>v1.0.1 2017-01-06  下载文件增加utf-8编码
+</div>
 <div>v1.0.0 2016-11-09
     <span>1.从disconf-web中分离出来，保持稳定</span>
     <span>2.主要提供几个接口：</span>
