--- a/disconf-web/src/main/resources/static/version.html
+++ b/disconf-web/src/main/resources/static/version.html
@@ -17,6 +17,10 @@
 </head>
 <body>
 disconf 发布日志
+<div>v1.0.3 2017-01-19  修复页面问题
+    <span>1.main.html点击获取,实例  解决内容太多显示不完全，使用layer弹出</span>
+    <span>2.修改审核比如文件，列出对比区别</span>
+</div>
 <div>v1.0.2 2016-12-01  新增标签管理功能
     <span>1.新增标签管理、增、删、改（只有DBA和admin可以操作）</span>
     <span>2.配置文件修改时可以设置${标签名}，使用了标签的配置文件需要 审核员和DBA审核、任一审核不通过，则不生效</span>
